--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     },
     "require": {
         "php": ">=5.6",
-        "symfony/dom-crawler": "^3.0",
-        "symfony/css-selector": "^3.0"
+        "symfony/dom-crawler": "2.8.8",
+        "symfony/css-selector": "2.8.8"
     },
     "require-dev": {
         "phpunit/phpunit": "5.0.*"
